opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ecaml"
bug-reports: "https://github.com/janestreet/ecaml/issues"
dev-repo: "git+https://github.com/janestreet/ecaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ecaml/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "async"
  "async_unix"
  "core"
  "core_kernel"
  "expect_test_helpers_kernel"
  "ppx_jane"
  "dune"                       {build & >= "1.5.1"}
]
synopsis: "Library for writing Emacs plugin in OCaml"
description: "
Ecaml is a library for writing Emacs plugins in OCaml. It uses Emacs
25 support for plugins to load native OCaml compiled code.
"
