opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ecaml"
bug-reports: "https://github.com/janestreet/ecaml/issues"
dev-repo: "git+https://github.com/janestreet/ecaml.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ecaml/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_kernel"
  "async_unix"
  "base"
  "core"
  "core_kernel"
  "core_unix"
  "expect_test_helpers_core"
  "file_path"
  "memtrace"
  "ppx_expect"
  "ppx_jane"
  "sexp_pretty"
  "sexplib"
  "dune"                     {>= "3.17.0"}
  "uutf"                     {= "1.0.3+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Library for writing Emacs plugin in OCaml"
description: "
Ecaml is a library for writing Emacs plugins in OCaml. It uses Emacs
25 support for plugins to load native OCaml compiled code.
"
