(library
 (name ecaml)
 (public_name ecaml)
 (library_flags -linkall)
 (libraries async async_kernel async_unix core_kernel.caml_threads
   base.composition_infix core core_unix dynlink ecaml_bench ecaml_value
   core_kernel.enum core_unix.error_checking_mutex ppx_expect.config_types
   expect_test_helpers_core file_path memtrace nested_profile sexp_pretty
   core_unix.signal_unix core_unix.time_ns_unix)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias default)
 (deps unnecessarily-global-symbols.sh glob_files *.ml)
 (action
  (bash ./unnecessarily-global-symbols.sh)))
